--- a/.github/workflows/1024.yml
+++ b/.github/workflows/1024.yml
@@ -2,9 +2,9 @@ name: 1024-AutoReply
 
 on:
   workflow_dispatch: # 手动触发
-  push:
-    branches:
-      - master
+#  push:
+#    branches:
+#      - master
   schedule:
     - cron: '0 16 * * *'
 
