--- a/.github/workflows/1024.yml
+++ b/.github/workflows/1024.yml
@@ -14,19 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: checkout actions
+    - name: 准备脚本运行环境
       run : |
         sudo apt-get update
         sudo apt-get -y install git
         sudo apt-get -y install python3-pip
         sudo apt-get -y install python3-setuptools
-
-    - name: install env
-      run :
-
         pip3 install requests onetimepass pillow
 
-    - name: run 1024.py
+    - name: 开始1024自动回复
       env:
         USER: ${{ secrets.USER }}
         PASSWORD: ${{ secrets.PASSWORD }}
