--- a/.github/workflows/1024.yml
+++ b/.github/workflows/1024.yml
@@ -15,8 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: 准备脚本运行环境
       run : |
-        sudo apt-get update
-        sudo apt-get -y install git python3-pip python3-setuptools 
+        sudo apt-get update & apt-get -y install git python3-pip python3-setuptools
+        #sudo 
         pip3 install requests onetimepass pillow
 
     - name: 开始1024自动回复
