--- a/.github/workflows/1024.yml
+++ b/.github/workflows/1024.yml
@@ -5,8 +5,8 @@ on:
 #  push: 取消Push的方式触发工作流，方便多次提交修改代码后统一调试
 #    branches:
 #      - master
-#  schedule:
-#    - cron: '0 16 * * *' #凌晨00:00执行
+  schedule:
+    - cron: '46 23 * * *' #凌晨07:23执行
 
 jobs:
   build:
