--- a/.github/workflows/1024.yml
+++ b/.github/workflows/1024.yml
@@ -12,8 +12,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: 准备脚本运行环境
+    - name: 准备脚本运行环境 01
+      uses: actions/checkout@v2
+    - name: 准备脚本运行环境 02
       run : |
         sudo apt-get update
         sudo apt-get -y install git python3-pip python3-setuptools
