--- a/.github/workflows/1024.yml
+++ b/.github/workflows/1024.yml
@@ -5,8 +5,8 @@ on:
 #  push: 取消Push的方式触发工作流，方便多次提交修改代码后统一调试
 #    branches:
 #      - master
-  schedule:
-    - cron: '21 4,10,22 * * *' #北京时间06:23、12:23、18:23执行
+# schedule:
+#   - cron: '21 4,10,22 * * *' #北京时间06:23、12:23、18:23执行
 
 jobs:
   build:
